feat: Add scroll snap

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -1,6 +1,4 @@
-<section
-  class='bg-black h-screen w-screen text-center overflow-hidden relative'
->
+<section class='bg-black h-screen w-full text-center overflow-hidden relative'>
   <div class='relative z-30 h-full flex flex-col'>
     <header>
       <h2 class='text-white pt-40 text-[40px] font-medium'>
