--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,13 +2,30 @@
 import Layout from '../layouts/Layout.astro'
 import LandingHeader from '../components/LandingHeader.astro'
 import HeroSection from '../components/HeroSection.astro'
+import ChargeSection from '../components/ChargeSection.astro'
 ---
 
 <Layout title='Tesla - El auto de tus sueños (y de Elon Musk)'>
-  <main>
-    <LandingHeader />
+  <LandingHeader />
 
+  <main
+    class='snap-y snap-mandatory relative w-full h-screen overflow-auto scroll-smooth'
+  >
     <!-- Fisrt Section -->
-    <HeroSection />
+    <div class='snap-center'>
+      <HeroSection />
+    </div>
+    <!-- Second Section -->
+    <div class='snap-center'>
+      <ChargeSection />
+    </div>
+
+    <!-- Other Sections -->
+    <!-- <div class='snap-center'>
+      <HeroSection />
+    </div>
+    <div class='snap-center'>
+      <ChargeSection />
+    </div> -->
   </main>
 </Layout>
