Change the color with observer

--- a/src/components/ChargeSection.astro
+++ b/src/components/ChargeSection.astro
@@ -1,5 +1,8 @@
-<section class='bg-black h-screen w-full text-center overflow-hidden relative'>
-  <div class='landing-section relative z-30 h-full flex flex-col'>
+<section
+  class='landing-section bg-black h-screen w-full text-center overflow-hidden relative'
+  data-header-color='black'
+>
+  <div class='relative z-30 h-full flex flex-col'>
     <header>
       <h2 class='text-black pt-40 text-[40px] font-medium'>Model Y</h2>
       <p class='text-black text-sm underline'>
