--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -1,4 +1,7 @@
-<section class='bg-black h-screen w-full text-center overflow-hidden relative'>
+<section
+  class='landing-section bg-black h-screen w-full text-center overflow-hidden relative'
+  data-header-color='white'
+>
   <div class='relative z-30 h-full flex flex-col'>
     <header>
       <h2 class='text-white pt-40 text-[40px] font-medium'>
