--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,11 +21,11 @@ import ChargeSection from '../components/ChargeSection.astro'
     </div>
 
     <!-- Other Sections -->
-    <!-- <div class='snap-center'>
+    <div class='snap-center'>
       <HeroSection />
     </div>
     <div class='snap-center'>
       <ChargeSection />
-    </div> -->
+    </div>
   </main>
 </Layout>
