--- a/src/components/LandingHeader.astro
+++ b/src/components/LandingHeader.astro
@@ -14,7 +14,7 @@ import Logo from './Logo.astro'
   <!-- Nav -->
   <nav>
     <ul
-      class='flex text-sm [&>li>a]:text-current [&>li>a]:font-medium [&>li>a]:inline-block [&>li>a]:px-4 [&>li>a]:py-2'
+      class='flex text-sm [&>li>a]:transition-colors [&>li>a]:duration-500 [&>li>a]:text-current [&>li>a]:font-medium [&>li>a]:inline-block [&>li>a]:px-4 [&>li>a]:py-2'
     >
       <li><a href='#model'>Model S</a></li>
       <li><a href='#model-3'>Model 3</a></li>
@@ -28,7 +28,7 @@ import Logo from './Logo.astro'
   <!-- Menú -->
   <nav class='flex flex-grow justify-end basis-0'>
     <ul
-      class='flex text-sm [&>li>a]:text-current [&>li>a]:font-medium [&>li>a]:inline-block [&>li>a]:px-4 [&>li>a]:py-2'
+      class='flex text-sm [&>li>a]:transition-colors [&>li>a]:duration-500 [&>li>a]:text-current [&>li>a]:font-medium [&>li>a]:inline-block [&>li>a]:px-4 [&>li>a]:py-2'
     >
       <li><a href='#'>Soporte</a></li>
       <li><a href='#'>Tienda</a></li>
