style: Fix order styles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import ChargeSection from '../components/ChargeSection.astro'
   <LandingHeader />
 
   <main
-    class='snap-y snap-mandatory relative w-full h-screen overflow-auto scroll-smooth'
+    class='relative w-full h-screen snap-y snap-mandatory overflow-auto scroll-smooth'
   >
     <!-- Fisrt Section -->
     <div class='snap-center'>
