--- a/src/components/ChargeSection.astro
+++ b/src/components/ChargeSection.astro
@@ -1,25 +1,25 @@
 <section
-  class='landing-section bg-black h-screen w-full text-center overflow-hidden relative'
+  class='landing-section relative h-screen w-full overflow-hidden text-center bg-black'
   data-header-color='black'
 >
-  <div class='relative z-30 h-full flex flex-col'>
+  <div class='relative z-30 flex flex-col h-full'>
     <header>
-      <h2 class='text-black pt-40 text-[40px] font-medium'>Model Y</h2>
-      <p class='text-black text-sm underline'>
+      <h2 class='pt-40 text-[40px] font-medium text-black'>Model Y</h2>
+      <p class='text-sm text-black underline'>
         Concertar una prueba de condución
       </p>
     </header>
 
     <!-- Buttons -->
     <footer class='flex flex-col flex-grow justify-end pb-20'>
-      <div class='flex gap-x-6 mx-auto'>
+      <div class='flex mx-auto gap-x-6'>
         <a
-          class='border-[3px] border-gray-600 bg-gray-600 text-sm rounded font-medium text-white px-12 py-2 inline-block hover:bg-gray-500 hover:border-gray-500 transition-colors'
+          class='inline-block px-12 py-2 border-[3px] rounded text-sm font-medium bg-gray-600 border-gray-600 text-white hover:bg-gray-500 hover:border-gray-500 transition-colors'
           href='#'
           >Explorar inventario
         </a>
         <a
-          class='bg-white text-sm rounded font-medium text-black px-12 py-2 transition-colors hover:bg-black hover:text-white inline-flex justify-center items-center'
+          class='inline-flex justify-center items-center px-12 py-2 rounded text-sm font-medium text-black bg-white hover:bg-black hover:text-white transition-colors'
           href='#'
           >Pedido personalisado
         </a>
@@ -27,7 +27,7 @@
     </footer>
   </div>
 
-  <div class='absolute top-0 bottom-0 h-full w-full z-10'>
+  <div class='absolute top-0 bottom-0 z-10 h-full w-full'>
     <img
       src='/model-y.webp'
       alt='Model Y'
