--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -1,13 +1,13 @@
 <section
-  class='landing-section bg-black h-screen w-full text-center overflow-hidden relative'
+  class='landing-section relative h-screen w-full overflow-hidden text-center bg-black'
   data-header-color='white'
 >
-  <div class='relative z-30 h-full flex flex-col'>
+  <div class='relative z-30 flex flex-col h-full'>
     <header>
-      <h2 class='text-white pt-40 text-[40px] font-medium'>
+      <h2 class='pt-40 text-[40px] font-medium text-white'>
         Disfrute de Tesla
       </h2>
-      <p class='text-white text-sm'>
+      <p class='text-sm text-white'>
         Programe una prueba de conducción hoy mismo
       </p>
     </header>
@@ -16,7 +16,7 @@
     <footer class='flex flex-col flex-grow justify-end pb-20'>
       <div>
         <a
-          class='border-[3px] border-white bg-white/5 backdrop-blur-sm text-sm rounded font-medium text-white px-12 py-2 inline-block hover:bg-white hover:text-black transition-colors'
+          class='inline-block px-12 py-2 border-[3px] rounded text-sm font-medium text-white border-white bg-white/5 backdrop-blur-sm hover:text-black hover:bg-white transition-colors'
           href='#'
           >Prueba de conducción
         </a>
@@ -24,9 +24,9 @@
     </footer>
   </div>
 
-  <div class='absolute top-0 bottom-0 h-full w-full z-10'>
+  <div class='absolute top-0 bottom-0 z-10 h-full w-full'>
     <video
-      class='object-center object-cover h-full w-full'
+      class='h-full w-full object-center object-cover'
       autoplay
       muted
       loop
