--- a/src/components/LandingHeader.astro
+++ b/src/components/LandingHeader.astro
@@ -4,7 +4,7 @@ import Logo from './Logo.astro'
 
 <header
   id='landing-header'
-  class='py-3 px-10 flex items-center fixed top-0 w-full justify-between z-40 text-white'
+  class='fixed top-0 flex items-center justify-between z-40 w-full py-3 px-10 text-white'
 >
   <!-- Logo -->
   <div class='flex flex-grow basis-0'>
@@ -14,7 +14,7 @@ import Logo from './Logo.astro'
   <!-- Nav -->
   <nav>
     <ul
-      class='flex text-sm [&>li>a]:transition-colors [&>li>a]:duration-500 [&>li>a]:text-current [&>li>a]:font-medium [&>li>a]:inline-block [&>li>a]:px-4 [&>li>a]:py-2'
+      class='flex text-sm [&>li>a]:inline-block [&>li>a]:px-4 [&>li>a]:py-2 [&>li>a]:font-medium [&>li>a]:text-current [&>li>a]:transition-colors [&>li>a]:duration-500'
     >
       <li><a href='#model'>Model S</a></li>
       <li><a href='#model-3'>Model 3</a></li>
@@ -28,7 +28,7 @@ import Logo from './Logo.astro'
   <!-- Menú -->
   <nav class='flex flex-grow justify-end basis-0'>
     <ul
-      class='flex text-sm [&>li>a]:transition-colors [&>li>a]:duration-500 [&>li>a]:text-current [&>li>a]:font-medium [&>li>a]:inline-block [&>li>a]:px-4 [&>li>a]:py-2'
+      class='flex text-sm [&>li>a]:inline-block [&>li>a]:px-4 [&>li>a]:py-2 [&>li>a]:font-medium [&>li>a]:text-current [&>li>a]:transition-colors [&>li>a]:duration-500'
     >
       <li><a href='#'>Soporte</a></li>
       <li><a href='#'>Tienda</a></li>
